<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">TVAllInOne</string>
    <string name="fzlt_zhun_hei">FZLTZHUNHEI_GBK.ttf</string>
    <string name="fzlt_cu_hei">FZLTHC_GBK.ttf</string>

    <string name="nav_tab_normal_ttf">@string/fzlt_zhun_hei</string>
    <string name="nav_tab_focus_ttf">@string/fzlt_cu_hei</string>

    <string name="search">搜索</string>
    <string name="menu_name">菜单</string>
    <string name="category_title_ttf">FZLTHC_GBK.ttf</string>
    <string name="info_ttf">FZLTH_GBK.ttf</string>

    <string name="empty_data"></string>
    <string name="user_tab">用户</string>

    <string name="mine_info_account_title">账户信息</string>
    <string name="mine_info_account_summary_none">您还没有登录</string>
    <string name="mine_info_account_summary_format">%.02f米币</string>
    <string name="login">登录</string>
    <string name="Username">账号</string>
    <string name="Password">密码</string>
    <string name="MeetingUsername">会议室账号</string>
    <string name="MeetingPassword">会议室密码</string>
    <string name="go">进入</string>
    <string name="forgot_your_password">忘记密码</string>
    <string name="error_cur_talking">正在通话中...</string>
    <string name="call_failed">通话失败</string>
    <string name="hangup_by_me">通话结束</string>
    <string name="hangup_by_him">通话结束</string>
    <string name="hangup_duration">通话时长：%s</string>
    <string name="reason_no_usable_account">无可用帐户</string>
    <string name="reason_timeout">连接超时</string>
    <string name="reason_unknown_protocol">未知协议</string>
    <string name="h323_end_by_local_user">本地端点应用结束通话</string>
    <string name="h323_end_by_no_accept">本地端点不接受通话</string>
    <string name="h323_end_by_answer_denied">本地端点拒绝来电</string>
    <string name="h323_end_by_remote_user">远程端点应用结束通话</string>
    <string name="h323_end_by_refusal">远程端点拒绝通话</string>
    <string name="h323_end_by_no_anwswer">远程端点没有在规定时间内回应</string>
    <string name="h323_end_by_caller_abort">远程端点停止通话</string>
    <string name="h323_end_by_transport_fail">传输错误，清除通话</string>
    <string name="h323_end_by_connect_fail">呼叫传输失败</string>
    <string name="h323_end_by_gatekeeper">网守已清除通话</string>
    <string name="h323_end_by_no_user">呼叫失败，无法找到用户</string>
    <string name="h323_end_by_no_bandwidth">呼叫失败，带宽不足</string>
    <string name="h323_end_by_capability_exchange">无法找到相同功能</string>
    <string name="h323_end_by_call_forward">通话未发送FACILITY报文</string>
    <string name="h323_end_by_security_denial">安全检查导致呼叫失败</string>
    <string name="h323_end_by_local_busy">本地端点忙碌</string>
    <string name="h323_end_by_local_congestion">本地端点堵塞</string>
    <string name="h323_end_by_remote_busy">远程端点忙碌</string>
    <string name="h323_end_by_remote_congestion">远程端点堵塞</string>
    <string name="h323_end_by_unreachable">无法连接到远端</string>
    <string name="h323_end_by_no_endpoint">对方没有运行端点</string>
    <string name="h323_end_by_host_offline">对方主机下线</string>
    <string name="h323_end_by_temporary_failure">远程暂时没有可用的应用程序重试</string>
    <string name="h323_end_by_q931_cause">远程结束通话，未映射的Q.931错误码</string>
    <string name="h323_end_by_duration_limit">执行时间限制，造成通话被清除</string>
    <string name="h323_end_by_invalid_conference_id">无效的会议ID，造成通话被清除</string>
    <string name="h323_end_by_osp_refusal">OSP服务器无法路由导致通话被清除</string>
    <string name="h323_end_by_invalid_number_format">无效的格式，造成通话被清除</string>
    <string name="h323_end_by_unspecified_protocol">由于未知的协议错误，通话结束</string>
    <string name="h323_end_by_no_feature_support">由于功能不存在，造成通话结束</string>
    <string name="h323_end_by_param_error">由于参数错误通话结束</string>
    <string name="unknown_error">未知错误</string>
    <string name="sip_end_by_unknown_uri_scheme">未知的URI</string>
    <string name="sip_end_by_bad_request">错误的请求</string>
    <string name="sip_end_by_forbidden">禁止呼叫</string>
    <string name="sip_end_by_not_found">远程端点未找到</string>
    <string name="sip_end_by_method_not_allowed">不允许的</string>
    <string name="sip_end_by_not_acceptable">本地不支持</string>
    <string name="sip_end_by_request_timeout">结果超时</string>
    <string name="sip_end_by_unsupport_media_type">远程端点不支持媒体类型</string>
    <string name="sip_end_by_unsupport_uri_scheme">不支持的URI格式</string>
    <string name="sip_end_by_bad_extension">错误的分机</string>
    <string name="sip_end_by_anonymity_disallowed">匿名拒绝</string>
    <string name="sip_end_by_temporarily_unavailable">暂时不可用</string>
    <string name="sip_end_by_call_transaction_not_exist">事务不存在</string>
    <string name="sip_end_by_loop_detected">检测到回环</string>
    <string name="sip_end_by_busy_here">本地忙</string>
    <string name="sip_end_by_not_acceptable_here">本地不支持</string>
    <string name="sip_end_by_bad_event">错误事件</string>
    <string name="sip_end_by_request_pending">等待请求</string>
    <string name="sip_end_by_internal_server_error">服务器内部错误</string>
    <string name="sip_end_by_service_lost">服务丢失</string>
    <string name="sip_end_by_service_unavailable">暂停服务</string>
    <string name="sip_end_by_decline">服务衰退</string>

</resources>
