<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg3"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/new_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >


    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/login_yanzhen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:background="@android:drawable/edit_text"
                android:drawablePadding="5dp"
                android:hint="@string/MeetingUsername"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/id_login_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:background="@android:drawable/edit_text"
                android:drawablePadding="5dp"
                android:hint="@string/MeetingPassword"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp"/>
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/bt_go"
            style="@style/focusable"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/login_login"
            android:clickable="true"
            android:text="@string/go"
            android:textColor="#9a9a9a"
            android:textSize="15sp"
            >
        </Button>
    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_your_password"
        style="@style/focusable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/forgot_your_password"
        android:visibility="gone"
        android:textColor="#9a9a9a"
        android:textSize="18sp"
        />

</LinearLayout>
