<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/new_ll"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        >

    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_yanzhen"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:drawablePadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:textSize="18sp"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:hint="@string/Username"/>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/id_login_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:background="@android:drawable/edit_text"
                android:drawablePadding="5dp"
                android:hint="@string/Password"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >
        <Button
            android:id="@+id/bt_go"
            android:background="@drawable/login_login"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="15sp"
            android:textColor="#9a9a9a"
            style="@style/focusable"
            android:clickable="true"
            >
        </Button>
    </RelativeLayout>


</LinearLayout>
